# DeaconDesktop

src/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
